--- a/res/layout/alarmitem.xml
+++ b/res/layout/alarmitem.xml
@@ -9,7 +9,11 @@
 	        android:layout_height="fill_parent"
 	        android:padding="10dip"
 	        android:textSize="16sp" />
-	
+	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:id="@+id/alarmid"
+	        android:layout_width="wrap_content"
+	        android:layout_height="fill_parent"
+	        android:visibility="gone"/>
     <CheckBox android:id="@+id/alarmEnable"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
