--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -9,4 +9,5 @@
   
   <item android:id="@+id/rename_item" android:title="Rename"/>
   <item android:id="@+id/delete_item" android:title="Delete"/>
+  <item android:id="@+id/upload_item" android:title="Upload"/>
 </menu>
